Add modals to view stats

--- a/products/templates/products/main.html
+++ b/products/templates/products/main.html
@@ -3,7 +3,25 @@
 {% block title %}Home{% endblock title %}
 
 {% block content %}
-    <div>
+
+<div class="ui modal mymodal">
+    <div class="header">
+        <h1>Price data</h1>
+    </div>
+    <div class="ui container">
+        <ul>
+            <li><strong>Count: </strong>{{ price.count }}</li>
+            <li><strong>Mean: </strong>{{ price.mean }}</li>
+            <li><strong>Median: </strong>{{ price.median }}</li>
+            <li><strong>Min: </strong>{{ price.min }}</li>
+            <li><strong>Max: </strong>{{ price.max }}</li>
+            <li><strong>Std dev: </strong>{{ price.std | floatformat }}</li>
+        </ul>
+    </div>
+</div>
+
+<div>
+    <div class="block-center">
         {% if error_message %}
         <div class="ui negative message">
             <i class="close icon"></i>
@@ -12,43 +30,53 @@
             </div>
         </div>
         {% endif %}
-        
+
         {% if request.POST %}
 
-            {% if graph %}
-            <img src="data:image/png;base64, {{ graph | safe }}">
-            {% endif %}
-
+        {% if graph %}
+        <img src="data:image/png;base64, {{ graph | safe }}">
         {% endif %}
 
-        <form action="" method="POST" class="ui form">
-            {% csrf_token %}
-            <div class="field">
-                <label>Choose a chart-type</label>
-                <div class="ui selection dropdown">
-                    <input type="hidden" name="sales">
-                    <i class="dropdown icon"></i>
-                    <div class="default text">--------------</div>
-                    <div class="menu">
-                        <div class="item" value="bar">Bar plot</div>
-                        <div class="item" value="line">Line plot</div>
-                        <div class="item" value="count">Count plot</div>
-                    </div>
-                </div>
-            </div>
-            <div class="field">
-                <div class="two fields">
-                    <div class="field">
-                        <label>Date from: </label>
-                        <input type="date" name="date_from" placeholder="Date from">
-                    </div>
-                    <div class="field">
-                        <label>Date to: </label>
-                        <input type="date" name="date_to" placeholder="Date to">
-                    </div>
-                </div>
-            </div>
-            <button class="ui primary button" type="submit">Select</button>
-        </form>
+        {% endif %}
     </div>
+    <br><br>
+    <form action="" method="POST" class="ui form">
+        {% csrf_token %}
+        <div class="field">
+            <label>Choose a chart-type</label>
+            <div class="ui selection dropdown">
+                <input type="hidden" name="sales">
+                <i class="dropdown icon"></i>
+                <div class="default text">--------------</div>
+                <div class="menu">
+                    <div class="item" value="bar">Bar plot</div>
+                    <div class="item" value="line">Line plot</div>
+                    <div class="item" value="count">Count plot</div>
+                </div>
+            </div>
+        </div>
+        <div class="field">
+            <div class="two fields">
+                <div class="field">
+                    <label>Date from: </label>
+                    <input type="date" name="date_from" placeholder="Date from">
+                </div>
+                <div class="field">
+                    <label>Date to: </label>
+                    <input type="date" name="date_to" placeholder="Date to">
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="block-center">
+            <button class="ui primary button" type="submit">Select</button>
+        </div>
+    </form>
+    <br>
+    <div class="block-center">
+        <button class="ui secondary button" id="modal-btn">See summary</button>
+        <button class="ui positive button">Add records</button>
+    </div>
+</div>
+
 {% endblock content %}
