--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,1 +1,19 @@
-<h1>Navbar</h1>
+{% url 'products:main-products-view' as path_to_products %}
+{% url 'products:add-purchase-view' as path_to_add_records %}
+
+<div class="ui secondary pointing menu">
+    <a class="item">
+        Home
+    </a>
+    <a href="{{ path_to_products }}" class="{% if request.path == path_to_products %}active{% endif %} item">
+        Products
+    </a>
+    <a href="{{ path_to_add_records }}" class="{% if request.path == path_to_add_records %}active{% endif %} item">
+        Add records
+    </a>
+    <div class="right menu">
+        <a class="ui item">
+            Logout
+        </a>
+    </div>
+</div>
