--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,6 @@
 {% url 'products:main-products-view' as path_to_products %}
 {% url 'products:add-purchase-view' as path_to_add_records %}
+{% url 'csvs:upload-view' as path_to_upload %}
 
 <div class="ui secondary pointing menu">
     <a class="item">
@@ -10,6 +11,9 @@
     </a>
     <a href="{{ path_to_add_records }}" class="{% if request.path == path_to_add_records %}active{% endif %} item">
         Add records
+    </a>
+    <a href="{{ path_to_upload }}" class="{% if request.path == path_to_upload %}active{% endif %} item">
+        Upload file
     </a>
     <div class="right menu">
         <a class="ui item">
