--- a/products/templates/products/sales.html
+++ b/products/templates/products/sales.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 
-{% block title %}Customer Data{% endblock title %}
+{% block title %}Sales{% endblock title %}
 
 {% block content %}
 
-<h1>Correlation: {{ corr }}</h1>
+<h1>Sales</h1>
 {% if graph %}
 <div class="block-center">
     <img src="data:image/png; base64, {{ graph | safe }}" height="800" width="auto">
 </div>
+
 {% endif %}
 
 {% endblock %}
