--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,27 +1,45 @@
+{% url 'home' as path_to_home %}
+{% url 'login' as path_to_login %}
+{% url 'logout' as logout %}
 {% url 'products:main-products-view' as path_to_products %}
 {% url 'products:add-purchase-view' as path_to_add_records %}
 {% url 'csvs:upload-view' as path_to_upload %}
 {% url 'customers:main-customers-view' as path_to_customers %}
+{% url 'products:sales-view' as path_to_sales %}
 
 <div class="ui secondary pointing menu">
-    <a class="item">
+    <a href="{{ path_to_home }}" class="{% if request.path == path_to_home %}active{% endif %} item">
         Home
     </a>
+    {% if request.user.is_authenticated %}
     <a href="{{ path_to_products }}" class="{% if request.path == path_to_products %}active{% endif %} item">
         Products
     </a>
-    <a href="{{ path_to_add_records }}" class="{% if request.path == path_to_add_records %}active{% endif %} item">
-        Add records
+    <a href="{{ path_to_sales }}" class="{% if request.path == path_to_sales %}active{% endif %} item">
+        Sales
     </a>
     <a href="{{ path_to_customers }}" class="{% if request.path == path_to_customers %}active{% endif %} item">
         Customers
+    </a>
+    <a href="{{ path_to_add_records }}" class="{% if request.path == path_to_add_records %}active{% endif %} item">
+        Add records
     </a>
     <a href="{{ path_to_upload }}" class="{% if request.path == path_to_upload %}active{% endif %} item">
         Upload file
     </a>
     <div class="right menu">
-        <a class="ui item">
+        <a href="{{ path_to_home }}" class="{% if request.path == path_to_home %}active{% endif %} item">
+            Hello, {{ user.username }}
+        </a>
+        <a href="{{ logout }}" class="ui item">
             Logout
         </a>
     </div>
+    {% else %}
+    <div class="right menu">
+        <a href="{{ path_to_login }}" class="{% if request.path == path_to_login %}active{% endif %} item">
+            Login
+        </a>
+    </div>
+    {% endif %}
 </div>
